# cookiecutter-pypackage

./: README.rst  cookiecutter.json
docs/: prompts.rst
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/requirements/: test.txt
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
