[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
author = Artefactual Systems, Inc.
author_email = info@artefactual.com
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
project_urls =
    Bug Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    Click>=8.0.4

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:main

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

{%- if cookiecutter.use_pytest == 'y' %}
[tool:pytest]
addopts = --ignore=setup.py
{%- endif %}

[options.packages.find]
exclude =
    tests*
