[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
author = Artefactual Systems, Inc.
author_email = info@artefactual.com
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
project_urls =
    Bug Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[options]
packages = find:
python_requires = >=3.10
install_requires =
    Click>=8.1.7

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
addopts = --ignore=setup.py
